<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@drawable/and_map">


    <TextView
        android:id="@+id/question_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center_horizontal"
        android:paddingTop="20pt"
        android:paddingHorizontal="5pt"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="16pt"/>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal|center_vertical"
        android:paddingTop="100dp">
        <Button
            android:id="@+id/true_button"
            android:textColor="@android:color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/true_button"
            android:background="@drawable/gradient"/>
        <Button
            android:id="@+id/false_button"
            android:background="@drawable/gradient"
            android:textColor="@android:color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/false_button" />



    </LinearLayout>

    <Button
        android:id="@+id/cheat_button"
        android:text="@string/cheat_button"
        android:layout_gravity="bottom|center"
        android:background="@drawable/button_shape"
        android:layout_width="50pt"
        android:layout_height="20pt"
        android:drawablePadding="4dp"/>


        <Button
            android:id="@+id/prev_button"
            android:background="@drawable/button_shape"
            android:textColor="@android:color/black"
            android:layout_width="50pt"
            android:layout_height="20pt"
            android:text="@string/prev_button"
            android:drawableLeft="@drawable/arrow_left"
            android:drawablePadding="4dp"
            android:layout_gravity="bottom|left"
            />


        <Button
            android:id="@+id/next_button"
            android:background="@drawable/button_shape"
            android:textColor="@color/black"
            android:layout_width="50pt"
            android:layout_height="20pt"
            android:text="@string/next_button"
            android:drawableRight="@drawable/arrow_right"
            android:drawablePadding="4dp"
            android:layout_gravity="bottom|right"/>






</FrameLayout>